--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -27,6 +27,11 @@
 
   <body id="{{ page_title | handle }}" class="template-{{ template.name | handle }}">
 
+    {% include 'button', content: 'Add To Cart', extra_attrs: 'data-add-to-cart' %}
+    {% include 'button', content: 'Get Cart', extra_attrs: 'data-get-cart' %}
+    {% include 'button', content: 'Empty Cart', extra_attrs: 'data-empty-cart' %}
+    {% include 'button', content: 'Toggle Inline Cart', extra_attrs: 'data-toggle-inline-cart' %}
+
     {% comment %}<a class="in-page-link u-visually-hidden u-skip-link" href="#MainContent">Skip to content</a>{% endcomment %}
 
     {% comment %}{% section 'topbar' %}{% endcomment %}
