--- a/src/snippets/archive/wip.label.liquid
+++ b/src/snippets/archive/wip.label.liquid
@@ -18,7 +18,7 @@
 {%- endcapture -%}
 
 {%- if errors == '' -%}
-  <label class="oo-label {{ classes }}" {{ additional_attributes }}
+  <label class="oo-label {{ classes }}" {{ extra_attrs }}
          for="{{- for -}}">
     {{- text -}}
   </label>
