--- a/src/snippets/archive/wip.menu.liquid
+++ b/src/snippets/archive/wip.menu.liquid
@@ -24,7 +24,7 @@
 {%- endcapture -%}
 
 {%- if errors == '' -%}
-  <div class="oo-menu {{ classes }}" {{ additional_attributes }}>
+  <div class="oo-menu {{ classes }}" {{ extra_attrs }}>
     {% include 'heading',
       text: heading,
       level: level %}
