--- a/src/snippets/archive/wip.text.liquid
+++ b/src/snippets/archive/wip.text.liquid
@@ -12,7 +12,7 @@
 {%- endcapture -%}
 
 {%- if errors == '' -%}
-  <p class="oo-text {{ classes }}" {{ additional_attributes }}>
+  <p class="oo-text {{ classes }}" {{ extra_attrs }}>
     {{- _text -}}
   </p>
 {%- else -%}
