--- a/src/snippets/base/ajax-inline-cart-contents.liquid
+++ b/src/snippets/base/ajax-inline-cart-contents.liquid
@@ -1,3 +1,3 @@
 {% for line_item in cart.items %}
-  {% include 'line_item' with line_item %}
+  {% include 'line-item' with line_item %}
 {% endfor %}
