--- a/src/snippets/core/atoms/button.liquid
+++ b/src/snippets/core/atoms/button.liquid
@@ -1,4 +1,4 @@
-<button class="oo-button {{ classes }}" {{ additional_attributes }}
-  {%- if type != blank %}type="{{- type -}}{% endif %}">
+<button class="oo-button {{ classes }}" {{ extra_attrs }}
+  {%- if type != blank %}type="{{- type -}}"{% endif %}>
   {{ content }}
 </button>
