--- a/src/snippets/core/atoms/input.liquid
+++ b/src/snippets/core/atoms/input.liquid
@@ -1,5 +1,5 @@
-<input class="oo-input {{ classes }}" {{ additional_attributes }}
-       type="{{- type -}}"
-       name="{{- name -}}"
-       value="{{- value -}}"
-       id="{{- id -}}">
+<input class="oo-input {{ classes }}" {{ extra_attrs }}
+  type="{{- type -}}"
+  name="{{- name -}}"
+  value="{{- value -}}"
+  id="{{- id -}}">
