--- a/src/snippets/core/atoms/label.liquid
+++ b/src/snippets/core/atoms/label.liquid
@@ -1,4 +1,4 @@
-<label class="oo-label {{ classes }}" {{ additional_attributes }}
-       for="{{- for -}}">
+<label class="oo-label {{ classes }}" {{ extra_attrs }}
+  for="{{- for -}}">
   {{- text -}}
 </label>
