--- a/src/snippets/core/atoms/link.liquid
+++ b/src/snippets/core/atoms/link.liquid
@@ -1,4 +1,4 @@
-<a class="oo-link {{ classes }}" {{ additional_attributes }}
-    href="{{- href -}}">
+<a class="oo-link {{ classes }}" {{ extra_attrs }}
+  href="{{- href -}}">
   {{- content -}}
 </a>
