--- a/src/snippets/archive/wip.button.liquid
+++ b/src/snippets/archive/wip.button.liquid
@@ -18,7 +18,7 @@
 {%- endcapture -%}
 
 {%- if errors == '' -%}
-  <button class="oo-button {{ classes }}" {{ additional_attributes }}
+  <button class="oo-button {{ classes }}" {{ extra_attrs }}
           {%- if type != blank %}type="{{- type -}}{% endif %}">
     {{ text }}
   </button>
