--- a/src/snippets/core/atoms/overlay.liquid
+++ b/src/snippets/core/atoms/overlay.liquid
@@ -1,1 +1,1 @@
-<div class="oo-overlay {{ classes }}" data-overlay {{ additional_attributes }}></div>
+<div class="oo-overlay {{ classes }}" data-overlay {{ extra_attrs }}></div>
