--- a/src/snippets/core/atoms/text.liquid
+++ b/src/snippets/core/atoms/text.liquid
@@ -1,3 +1,3 @@
-<p class="oo-text {{ classes }}" {{ additional_attributes }}>
+<p class="oo-text {{ classes }}" {{ extra_attrs }}>
   {{- text -}}
 </p>
