--- a/src/snippets/core/molecules/social-media-icons.liquid
+++ b/src/snippets/core/molecules/social-media-icons.liquid
@@ -1,27 +1,34 @@
+{% assign the_networks = blank %}
 {% assign the_networks = networks | split: '::' %}
 
 <div class="oo-social-media-icons">
   {% for network in the_networks %}
+    {% assign the_icon = blank %}
     {% capture the_icon %}
       {% include 'icon', name: network %}
     {% endcapture %}
+
+    {% assign setting_name = blank %}
     {% assign setting_name = 'social_' | append: network | append: '_link' %}
+
+    {% assign href = blank %}
     {% assign href = settings[setting_name] %}
-    {% capture additional_attributes %}
+
+    {% assign extra_attrs = blank %}
+    {% capture extra_attrs %}
       data-network="{{ network }}"
     {% endcapture %}
+
     {% if type != blank %}
       {% include type,
         content: the_icon,
         href: href,
-        additional_attributes: additional_attributes %}
+        extra_attrs: extra_attrs %}
     {% else %}
       {% include 'link',
         content: the_icon,
         href: href,
-        additional_attributes: additional_attributes %}
+        extra_attrs: extra_attrs %}
     {% endif %}
-    {% assign additional_attributes = blank %}
   {% endfor %}
-
 </div>
